Fix notebooks and write readme

--- a/notebooks/Decision Tree.ipynb
+++ b/notebooks/Decision Tree.ipynb
@@ -92,7 +92,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv(r\"..\data\decision tree dataset.txt\", index_col=\"Day\")\n",
+    "data = pd.read_csv(r\"..\\data\\decision tree dataset.txt\", index_col=\"Day\")\n",
     "\n",
     "target = data[\"Play\"]\n",
     "data = data.drop(\"Play\", axis=1)\n",
