--- a/notebooks/Linear Regression True.ipynb
+++ b/notebooks/Linear Regression True.ipynb
@@ -274,7 +274,7 @@
    ],
    "source": [
     "# import from csv\n",
-    "df = pd.read_csv(r\"..\data\vgsales.csv\")\n",
+    "df = pd.read_csv(r\"..\\data\\vgsales.csv\")\n",
     "\n",
     "# droping unuseless features\n",
     "df = df.drop(\"Rank\", axis=1)\n",
