--- a/notebooks/Naive Bayes Classifier.ipynb
+++ b/notebooks/Naive Bayes Classifier.ipynb
@@ -101,7 +101,7 @@
     "    \"age\": np.float64,\n",
     "    \"gender\": np.string_\n",
     "}\n",
-    "data = pd.read_csv(r\"..\data\Howell1.csv\", dtype=types)\n",
+    "data = pd.read_csv(r\"..\\data\\Howell1.csv\", dtype=types)\n",
     "data[\"age\"] = data[\"age\"].astype(np.int64)\n",
     "data.head()"
    ]
