--- a/notebooks/Decision Tree.ipynb
+++ b/notebooks/Decision Tree.ipynb
@@ -109,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
